Fix CSS spacing (tab to space), add headshot to header

--- a/css/general.css
+++ b/css/general.css
@@ -1,243 +1,248 @@
 .regularBody {
-	font-family: 'Droid Serif', serif;
-	background-color: #fff;
-	font-size: 20px;
-	background-color: #f0f0f0;
+  font-family: 'Droid Serif', serif;
+  background-color: #fff;
+  font-size: 20px;
+  background-color: #f0f0f0;
 }
 
 .appBody {
-	font-family: ‘Roboto’, Arial, serif;  
-	background-color: #272822;
-	color: #FFF;
-	font-size: 32px;
-	font-weight: 500;
-	clear: both;
+  font-family: ‘Roboto’, Arial, serif;
+  background-color: #272822;
+  color: #FFF;
+  font-size: 32px;
+  font-weight: 500;
+  clear: both;
 }
 
 .bigHeader {
-	font-size: 42px;	
+  font-size: 42px;
 }
 
 .blueHilite {
-	color: #2e343d;	
-	font-weight: 700;
+  color: #2e343d;
+  font-weight: 700;
+}
+
+#headshot {
+  height: 60px;
+  border-radius: 50%;
+  margin: 0 20px;
 }
 
 #nav {
-	color: #FFF;
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	background-color: #2e343d;
+  color: #FFF;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  background-color: #2e343d;
+  display: flex;
+  align-items: center;
+  padding: 10px;
 }
 
 #nav ul {
-	margin: 0px;
-	list-style: none;	
-	list-style-type: none;
-	padding: 15px;
+  margin: 0px;
+	list-style: none;
+  list-style-type: none;
+  padding: 15px;
 }
 
 #nav ul li {
-	display: inline;
-	padding: 0px;
-	padding-right: 30px;
+  display: inline;
+  padding: 0px;
+  padding-right: 30px;
 }
 
 #centerStage {
-	text-align: center;
-	margin-top: 150px;
-	padding-left: 30px;
-	padding-right: 30px;
+  text-align: center;
+  margin-top: 150px;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 #wrapper {
-	width: 760px;
-  	margin-left: auto;
-  	margin-right: auto;	
-	margin-top: 100px; 
-	padding: 50px;
-	background-color: #653B3C;
-	border-bottom-width: 10px;
-	border-bottom-color: #331E1F;
-	border-bottom-style: solid;
+  width: 760px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+  padding: 50px;
+  background-color: #653B3C;
+  border-bottom-width: 10px;
+  border-bottom-color: #331E1F;
+  border-bottom-style: solid;
 }
 
 #wrapperBare {
-	width: 760px;
-  	margin-left: auto;
-  	margin-right: auto;	
-	margin-top: 50px; 
+  width: 760px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
 }
 
 #header {
-	font-size: 60px;
-	font-weight: 700;
-	margin-bottom: 50px;
-	float:left;
+  font-size: 60px;
+  font-weight: 700;
+  margin-bottom: 50px;
+  float:left;
 }
 
 #appImageContainer {
-	float: left;
-	width: 60%;
+  float: left;
+  width: 60%;
 }
 
 #appInfoContainer {
-	float: right;
-	width: 40%;
-	margin-top: 100px;
+  float: right;
+  width: 40%;
+  margin-top: 100px;
 }
 
 .framedAppImage {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 #links {
-	text-align: center;	
-	padding-top: 20px;
-	padding-bottom: 75px;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 75px;
 }
 
 #links ul {
-	margin: 0px;
-	list-style: none;	
-	list-style-type: none;
-	padding: 0px;
+  margin: 0px;
+  list-style: none;
+  list-style-type: none;
+  padding: 0px;
 }
 
 #links ul li {
-	display: inline;
-	padding-right: 10px;
-	padding-top: 0px;
+  display: inline;
+  padding-right: 10px;
+  padding-top: 0px;
 }
 
 #githubIcon {
-	background-image: url(../img/github-64.png);
-	background-color: #4183C4;
+  background-image: url(../img/github-64.png);
+  background-color: #4183C4;
 }
 
 #linkedinIcon {
-	background-image: url(../img/linkedin-64.png);
-	background-color: #007FB1;
+  background-image: url(../img/linkedin-64.png);
+  background-color: #007FB1;
 }
 
 #resumeIcon {
-	background-image: url(../img/resume-64.png);
-	background-color: #8CC319;
+  background-image: url(../img/resume-64.png);
+  background-color: #8CC319;
 }
 
 #emailIcon {
-	background-image: url(../img/email-64.png);
-	background-color: #DD4B39;
+  background-image: url(../img/email-64.png);
+  background-color: #DD4B39;
 }
 
 #backToDevLink {
-	position: fixed;
-	top: 0px;
-	left: 0px;
-	padding: 10px 16px 10px 10px;
-	font-size: 15px;
-	font-weight: 500;
-	-webkit-border-bottom-right-radius: 20px;
-	-moz-border-radius-bottomright: 20px;
-	border-bottom-right-radius: 20px;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  padding: 10px 16px 10px 10px;
+  font-size: 15px;
+  font-weight: 500;
+  -webkit-border-bottom-right-radius: 20px;
+  -moz-border-radius-bottomright: 20px;
+  border-bottom-right-radius: 20px;
 }
 
 #backToDevLink a {
-	color:white;
+  color:white;
 }
 
 .hide {
-	visibility: hidden;
-}
-
-.text-center {
-	text-align: center;	
+  visibility: hidden;
 }
 
 .textCenter {
-	text-align: center;
+  text-align: center;
 }
 
 .divider {
-	border-bottom: 1px #ffbf00 dotted; 
-	margin: 30px 0 30px 0;
+  border-bottom: 1px #ffbf00 dotted;
+  margin: 30px 0 30px 0;
 }
 
 .hilite {
-	color: #ffbf00;	
-	font-weight: 700;
+  color: #ffbf00;
+  font-weight: 700;
 }
 
 .icon {
-	display: inline-block;
-	height: 32px;
-	width: 32px;
-	background-size: 32px 32px;
-	background-position: center center;
-	background-repeat: no-repeat;
-	margin: 5px;
-	text-indent: -9999em;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
+  display: inline-block;
+  height: 32px;
+  width: 32px;
+  background-size: 32px 32px;
+  background-position: center center;
+  background-repeat: no-repeat;
+  margin: 5px;
+  text-indent: -9999em;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
 }
 
 .purple {
-	color: #aa66cc;
+  color: #aa66cc;
 }
 
 .red {
-	color: #ff4444;
+  color: #ff4444;
 }
 
 .purpleBackground {
-	background-color: #aa66cc;	
+  background-color: #aa66cc;
 }
 
 .redBackground {
-	background-color: #ff4444;
+  background-color: #ff4444;
 }
 
 .orangeBackground {
-	background-color: #ffbf00;	
+  background-color: #ffbf00;
 }
 
 .brownRedBackground {
-	background-color: #653b3c;
+  background-color: #653b3c;
 }
 
 .purpleBorder {
-	border-color: #aa66cc;
+  border-color: #aa66cc;
 }
 
 .redBorder {
-	border-color: #ff4444;
+  border-color: #ff4444;
 }
 
-img { 
-	border-width: 0;
+img {
+  border-width: 0;
 }
 
-a { 
-	text-decoration:none;
-	color: #FFF; 
+a {
+  text-decoration:none;
+  color: #FFF;
 }
 
-a:link { 
-	text-decoration: none; 
+a:link {
+  text-decoration: none;
 }
 
-a:visited { 
-	text-decoration: none; 
+a:visited {
+  text-decoration: none;
 }
 
-a:hover { 
-	text-decoration: none; 
+a:hover {
+  text-decoration: none;
 }
 
 a:active {
-	text-decoration: none; 
+  text-decoration: none;
 }
